[metadata]
name = yp
version = 0.0.7
url = https://github.com/thorwhalen/yp
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = A mapping view to pypi projects
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = yp

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	bs4
	requests
	dol

